<resources>
    <string name="app_name">GadsLeaderboard</string>
    <string name="splash_image_desc">splash image</string>
    <string name="leader_board">LEADERBOARD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_learner_image">Top learner image</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_leaders">Skill IQ Leaders</string>

    <!--Errors-->
    <string name="connect_exception">Could not connect to the server. Please check your internet connection and try again.</string>
    <string name="unknown_host_exception">Couldn\'t connect to the server. Please check your internet connection</string>
    <string name="timed_out_exception">Request timed out while trying to connect. Please ensure you have a strong signal and try again.</string>
    <string name="unknown_exception">An unexpected error has occurred. Please try again.</string>
    <string name="general_error_message">An error occurred, please try again and contact the administrator</string>
    <string name="error_dialog_title">Error</string>
    <string name="learning_details">%s learning hours, %s</string>
    <string name="iq_score">%s skill IQ Score, %s</string>
    <string name="custom_back_btn">back button</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="project_github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="submission_success">Submission successful</string>
    <string name="submission_failure">Submission unsuccessful</string>
    <string name="success_status_desc">success status</string>
    <string name="are_you_sure">Are you sure</string>
</resources>